--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,8 +1,13 @@
 .card {
-    border: 1px solid red;
-    margin: 5px;
-    padding: 20px;
-    width: 150px;
-    height: 150px;
-    border-radius: 2px
+  border: 3px solid rgb(7, 14, 114);
+  margin: 5px;
+  padding: 3px 10px;
+  width: 150px;
+  height: 150px;
+  border-radius: 2px;
+  background-color: rgb(4, 58, 20);
+  color: #fff;
+  text-align: center;
+  font-style: oblique;
+  font-family: Arial, Helvetica, sans-serif;
 }
