--- a/src/leaderboard.css
+++ b/src/leaderboard.css
@@ -1,20 +1,25 @@
-table,
+/* table,
 th,
 td {
+  table-layout: auto;
   margin: 0px 2px;
-  border: 1px solid;
+  border: none;
   width: 100%;
+  column-width: auto;
   border-collapse: collapse;
 }
 
 td {
   padding: 5px;
-  text-align: left;
+  text-align: center;
+  letter-spacing: 2px;
 }
 
 th {
   height: 40px;
   border: none;
+  text-align: center;
+  letter-spacing: 2px;
 }
 
 tr:hover {
@@ -23,5 +28,24 @@ tr:hover {
 }
 
 .user {
-  width: 80px;
+  width: 20px;
+} */
+
+table {
+  table-layout: auto;
+  width: 100%;
+  border-collapse: collapse;
+  border: none;
+  margin-top: 50px;
+}
+
+th {
+  text-align: center;
+  width: 50%;
+}
+
+td {
+  text-align: center;
+  width: 50%;
+  padding: 3px;
 }
